--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/forms": "^10.0.0",
-    "@angular/material": "^10.0.0",
-    "@angular/material-moment-adapter": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
-    "angular-in-memory-web-api": "~0.11.0",
-    "moment": "^2.26.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.2",
-    "zone.js": "~0.10.3",
-    "angular-date-value-accessor": "latest"
+    "@angular/animations": "10.2.3",
+    "@angular/cdk": "10.2.7",
+    "@angular/common": "10.2.3",
+    "@angular/compiler": "10.2.3",
+    "@angular/core": "10.2.3",
+    "@angular/forms": "10.2.3",
+    "@angular/material": "10.2.7",
+    "@angular/material-moment-adapter": "10.2.7",
+    "@angular/platform-browser": "10.2.3",
+    "@angular/platform-browser-dynamic": "10.2.3",
+    "@angular/router": "10.2.3",
+    "@fullcalendar/core": "^5.4.0",
+    "angular-date-value-accessor": "1.1.0",
+    "angular-in-memory-web-api": "0.11.0",
+    "moment": "2.29.1",
+    "primeflex": "2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^10.0.3",
+    "rxjs": "6.6.3",
+    "tslib": "1.14.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.0",
